# vero-core-engine

./: .env.example  .gitignore  BUILD_ENGINE.sh  CONTRIBUTING.md  Cargo.toml  DETERMINISTIC_HASHING_IMPLEMENTATION.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  PULL_REQUEST.md  README.md  RPC_FAILOVER_SUMMARY.md  SECURITY.md  TODO.md  temp_useZodForm.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  engine-ci.yml
dashboard/src/: App.tsx
dashboard/src/components/: Field.tsx
dashboard/src/hooks/: useZodForm.ts
dashboard/src/lib/: validation.ts  (+1 more)
engine/: CODE_REVIEW_CHECKLIST.md  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md  SERIALIZATION_GUIDE.md  VERIFICATION_CHECKLIST.md
engine-bridge/: event-queue.db  jest.config.js  package-lock.json  package.json  test-prop-queue-1782278824121.db  test-prop-queue-1782279376136.db  tsconfig.json
engine-bridge/src/: event-propagator.ts  event-queue.ts  heartbeat-monitor.ts  index.ts  nonce-manager.ts  rpc-client.ts
engine-core/: Cargo.toml
engine-core/src/: access.rs  audit.rs  burn.rs  circuit_breaker.rs  emergency_recovery.rs  event_struct.rs  event_utils.rs  governance.rs  governance_tests.rs  lib.rs  protocol_fee.rs  reentrancy_tests.rs  treasury.rs  treasury_tests.rs  types.rs  upgrade.rs
engine/examples/: basic_usage.rs  deterministic_hashing.rs
engine/src/: health.rs  lib.rs  provider_auth.rs  rpc.rs  serialization.rs  types.rs
engine/tests/: integration_test.rs  serialization_integration_tests.rs
security/: SECURITY.md
src/contracts/: events.rs
(+70 files in other folders)
