[package]
name = "vero-engine"
version = "0.1.0"
edition = "2021"
description = "Vero Protocol Engine - High-availability RPC client with intelligent failover"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
